k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chat-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:

      # frontend — catches everything at /
      - path: /()(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: frontend-service
            port:
              number: 3000

      # nestjs backend — /api goes to backend
      - path: /api(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: backend-service
            port:
              number: 4000

      # python ai backend — /ai goes to ai-backend
      - path: /ai(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: ai-backend-service
            port:
              number: 8000
